force-app/main/default/objects/Ticket_Request_Event__c/Ticket_Request_Event__c.object-meta.xml
<CustomObject>
    <label>Ticket Request Event</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Requests Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>