force-app/main/default/objects/Ticket_Request_Event__c/fields/Lower_Level_Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>Lower_Level_Tickets_Available__c</fullName>
    <label>Lower Level Tickets Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>