force-app/main/default/objects/Ticket_Request_Event__c/fields/No_Of_Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Tickets_Available__c</fullName>
    <label>No. Of Tickets Available</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>