force-app/main/default/objects/Ticket_Request_Event__c/fields/Number_of_Parking_Passes_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parking_Passes_Available__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Parking Passes Available</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>