force-app/main/default/objects/Ticket_Request_Event__c/fields/Number_of_Tickets_Givenaway__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tickets_Givenaway__c</fullName>
    <label>Number of Tickets Givenaway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>