force-app/main/default/objects/Ticket_Request_Event__c/fields/Suite_Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>Suite_Tickets_Available__c</fullName>
    <label>Suite Tickets Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>