force-app/main/default/objects/Ticket_Request_Event__c/fields/Type_of_Giveaway__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Giveaway__c</fullName>
    <label>Type of Giveaway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raffle</fullName>
            </value>
            <value>
                <fullName>Higher Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>