force-app/main/default/objects/Ticket_Request_Event__c/fields/VVIP_Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>VVIP_Tickets_Available__c</fullName>
    <label>Club Tickets Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>