force-app/main/default/objects/Ticket_Request_Event__c/validationRules/Available_Tickets_should_not_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Tickets_should_not_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>OR(VALUE( No_Of_Tickets_Available__c ) &lt; 0, 
VALUE( Suite_Tickets_Available__c ) &lt; 0,
VALUE( Lower_Level_Tickets_Available__c ) &lt; 0,   
VALUE( VVIP_Tickets_Available__c) &lt; 0 )</errorConditionFormula>
    <errorMessage>No of Available Tickets of Each Type should not be negative.</errorMessage>
</ValidationRule>