force-app/main/default/objects/Ticket_Request_Event__c/validationRules/Event_Date_should_not_be_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_should_not_be_in_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Event Date should not be a past date.</errorMessage>
</ValidationRule>