force-app/main/default/objects/Ticket_Request_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Event_Name_Date__c</columns>
    <columns>Event_Date__c</columns>
    <columns>No_Of_Tickets_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>